# NeedForCE

./: CMakeLists.txt  Makefile  NeedForCE.cpp  NeedForCE.sh  NeedForCerignola  gioco.cpp  gioco.h  header.h  levelgenerator.cpp  levelgenerator.h  livello.cpp  livello.h  mappa.cpp  mappa.h  mappa.txt  oggetto.cpp  oggetto.h  player.cpp  player.h  readme.md
debian/: NeedForCE.install  changelog  control  copyright  gbp.conf  rules  watch
